# rhokp-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  podman-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
agent/: .env.example  __init__.py  agent.py
containers/: README.md
containers/adk-agent/: Dockerfile
containers/demo/: Dockerfile
containers/mcp-server/: Dockerfile
demo/: README.md  ask_okp.py
deploy/: README.md
deploy/openshift/: adk-web.yaml  kustomization.yaml  mcp-server.yaml  rhokp.yaml  secret-template.yaml
docs/: air-gap-deployment.md  architecture.md  containers-step-by-step.md  oss-roadmap.md  podman-ubi-plan.md  public-repo-checklist.md  running.md  telemetry.md
docs/review-plans/: 00-overview.md  01-expert-code-review.md  02-product-manager-review.md  03-software-architect-review.md  04-ai-architect-review.md  05-vibe-code-audit.md  06-okp-solr-discovery.md  07-maturity-scorecard.md  README.md
eval/: queries.jsonl  run_eval.py
mcp_server/: README.md  server.py
src/rhokp/: __init__.py  __main__.py  client.py  config.py  logging.py  models.py  preprocessing.py  reranking.py  retrieve.py  retrievers.py
src/rhokp/adapters/: __init__.py  adk.py
src/rhokp/backends/: __init__.py  mock.py  solr.py
src/rhokp/mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_agent.py  test_backends.py  test_client.py  test_config.py  test_main.py  test_mcp_server.py  test_models.py  test_preprocessing.py  test_retrievers.py
